Used text-align to try to fix centering issue on mobile device.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ button {
 }
 
 #header {
+    text-align: center;
     font-size: 60px;
     display: flex;
     flex: 4;
@@ -42,6 +43,7 @@ button {
 }
 
 #description {
+    text-align: center;
     margin-top: 30px;
     font-size: 25px;
     display: flex;
